# scrybe

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  build-and-setup.sh  install.sh
.github/workflows/: ci.yml
packaging/: scrybe.desktop
qml/: Island.qml  Main.qml  SettingsWindow.qml  TranscriptBox.qml  Visualizer.qml
scripts/: download-model.sh  faster_whisper_sidecar.py  install-backend.sh  python-env.sh  register-shortcut.sh  uninstall.sh
src/: main.cpp
src/audio/: AudioCapture.cpp  AudioCapture.h
src/core/: Controller.cpp  Controller.h
src/llm/: LlmBeautifier.cpp  LlmBeautifier.h
src/paste/: Paster.cpp  Paster.h
src/stt/: FasterWhisperBackend.cpp  FasterWhisperBackend.h  Models.h  OpenVinoBackend.cpp  OpenVinoBackend.h  Resample.cpp  Resample.h  SttBackend.cpp  SttBackend.h  SttEngine.cpp  SttEngine.h  WhisperCppBackend.cpp  WhisperCppBackend.h
src/update/: Updater.cpp  Updater.h
src/util/: PythonEnv.h  Terminal.h  Text.cpp  Text.h  Version.cpp  Version.h  Wav.cpp  Wav.h
tests/: CMakeLists.txt  test_sidecar.py  tst_resample.cpp  tst_text.cpp  tst_version.cpp  tst_wav.cpp
